--- a/html-task/task.css
+++ b/html-task/task.css
@@ -77,9 +77,10 @@ main {
   }
   
 .step-box{
-   margin: 0 0 30px 0;
-   margin-left: auto;
-   margin-right: auto;
+ width: 90%;
+ margin: 0 0 20px 0;
+ margin-left: auto;
+ margin-right: auto;
 }
 
 .step-box:last-child {
